Adding GitIgnore to the config file.

--- a/examples/git_sync.cfg
+++ b/examples/git_sync.cfg
@@ -5,3 +5,6 @@ remote_host=remosthost
 remote_user=my_user_on_the_remote_host
 remote_path=/somewhere/on/the/remote/machine
 remote_repo=/somewhere/else/on/the/remote/machine
+[GitIgnore]
+1=.DS_Store
+2=.svn*
